--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "express": "^4.18.2",
     "technicalindicators": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
+    "react-dom": "^18.2.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
