--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "technicalindicators": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.12.0",
+    "lucide-react": "^0.330.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
