build: Update dependencies and build process
Reverted version pinning in requirements.txt to allow flexibility.
Added pip upgrade command to render.yaml build script.

--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: intraday-hawk
     env: python
     buildCommand: |
+      pip install --upgrade pip
       pip install -r requirements.txt
       npm install
       npm run build
